Updating to 76ffa0b4719e3b90fece067b3c4a142141757c48.

--- a/hmwk0/index.html
+++ b/hmwk0/index.html
@@ -44,7 +44,11 @@
 		
 	
 		
-		<li><a href="#4_rails_installer" data-toggle="tab">RailsInstaller </a></li>
+		<li><a href="#4_rails_installer" data-toggle="tab">Ruby/git: the easy way </a></li>
+		
+	
+		
+		<li><a href="#5_homebrew_mac" data-toggle="tab">Ruby/git: the better way </a></li>
 		
 	
 		
@@ -114,10 +118,14 @@
 <p>Task:</p>
 </strong>
 <p>Sign up for a GitHub account at <a href='https://github.com/'>https://github.com/</a>. Make sure you <strong>know your password</strong> to avoid awkward moments in class!</p>
+</div><div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>Using your GitHub account, sign up for the course forum at <a href='http://chat.code61.org/'>chat.code61.org/</a>.</p>
 </div>
 <h3 id='what_is_github'>What is GitHub?</h3>
 
-<p>GitHub is a site that allows you to share code with others. It basically allows you to put a <em>git repository</em> online. Git is a program that helps with the management of code. If you want, you can <a href='http://git-scm.com/'>find out a bit more about git</a> now - or you can wait until we cover it in the course.</p>
+<p>GitHub is a site that allows you to share code with others. It basically allows you to put a <em>git repository</em> online. Git is a program that helps with the management of code. If you want, you can <a href='http://alistapart.com/article/get-started-with-git'>find out a bit more about git</a> now - or you can wait until we cover it in the course.</p>
 
 <p>There are several other sites that are similar to GitHub e.g. <a href='https://bitbucket.org'>BitBucket</a>. GitHub is by far the most widely used.</p>
 
@@ -128,8 +136,13 @@
 	<div class="tab-pane " id="4_rails_installer">
 	
 
-		<h2>RailsInstaller</h2>
-		<div class='exercise alert alert-info'><strong>
+		<h2>Ruby/git: the easy way</h2>
+		<p>If you use a Mac you should read &#8220;Installing: the better way&#8221; before deciding which to do.</p>
+
+<h3 id='ruby_git_and_rails'>Ruby, git and rails</h3>
+
+<p>In this step</p>
+<div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
 <p>Go to <a href='http://railsinstaller.org/'>http://railsinstaller.org/</a> and follow the instructions for your operating system (choosing all the defaults they give).</p>
@@ -143,6 +156,14 @@
 <p>On Mac:</p>
 
 <p>You then need to do ssh upload.</p>
+	</div>
+
+	
+	<div class="tab-pane " id="5_homebrew_mac">
+	
+
+		<h2>Ruby/git: the better way</h2>
+		<p>Mac only.</p>
 	</div>
 
 	
