--- a/ruby_plan.html
+++ b/ruby_plan.html
@@ -118,6 +118,16 @@
 <li>compiling student results?</li>
 </ul>
 
+<h2 id='ruby_5_advanced_things'>Ruby 5: advanced things</h2>
+
+<ul>
+<li>functions without return</li>
+
+<li>function calling without brackets</li>
+
+<li>yield</li>
+</ul>
+
 <h2 id='ruby_5_classes'>Ruby 5: classes</h2>
 
 <ul>
