--- a/ruby3/index.html
+++ b/ruby3/index.html
@@ -202,11 +202,19 @@
 a[6] = 5
 a #=&gt; [1, 2, nil, nil, nil, nil, 5]</code></pre>
 </li>
+
+<li>
+<p>You can also add to the end of an array by doing <code>a &lt;&lt; 5</code>. This is very &#8216;rubyish&#8217; and you&#8217;ll see it a lot.</p>
+</li>
 </ul>
 
-<h3 id='strings_to_arrays'> Strings to arrays</h3>
+<h3 id='strings_to_arrays_to_strings'> Strings to arrays to strings</h3>
 
-<h3 id='arrays_of_arrays'>Arrays of arrays</h3>
+<ul>
+<li>Strings have a <code>split</code> method which will convert a string into an array of words</li>
+
+<li>Arrays can be joined back into strings e.g. <code>a.join(&#39;,&#39;)</code> joins up the elements of <code>a</code> using <code>,</code></li>
+</ul>
 <div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
@@ -229,8 +237,40 @@ a #=&gt; [1, 2, nil, nil, nil, nil, 5]</code></pre>
 	
 
 		<h2>Sorting and Filtering</h2>
-		<div class='highlight'><pre><code class='ruby'><span class='n'>array</span><span class='o'>.</span><span class='n'>sort</span> <span class='p'>{</span><span class='o'>|</span><span class='n'>i</span><span class='p'>,</span><span class='n'>j</span><span class='o'>|</span> <span class='n'>i</span> <span class='o'>&lt;=&gt;</span> <span class='n'>j</span><span class='p'>}</span>
+		<h3 id='sorting'>Sorting</h3>
+<div class='highlight'><pre><code class='ruby'><span class='o'>[</span><span class='mi'>3</span><span class='p'>,</span> <span class='mi'>2</span><span class='p'>,</span> <span class='mi'>1</span><span class='o'>].</span><span class='n'>sort</span>
+
+<span class='o'>[</span><span class='s1'>&#39;apple&#39;</span><span class='p'>,</span> <span class='s1'>&#39;banana&#39;</span><span class='p'>,</span> <span class='s1'>&#39;pear&#39;</span><span class='o'>].</span><span class='n'>sort</span>
+
+<span class='o'>[</span><span class='s1'>&#39;apple&#39;</span><span class='p'>,</span> <span class='s1'>&#39;banana&#39;</span><span class='p'>,</span> <span class='s1'>&#39;pear&#39;</span><span class='o'>].</span><span class='n'>sort</span> <span class='p'>{</span><span class='o'>|</span><span class='n'>a</span><span class='p'>,</span> <span class='n'>b</span><span class='o'>|</span> <span class='n'>a</span><span class='o'>.</span><span class='n'>length</span> <span class='o'>&lt;=&gt;</span> <span class='n'>b</span><span class='o'>.</span><span class='n'>length</span> <span class='p'>}</span>
 </code></pre></div>
+<h3 id='filtering'>Filtering</h3>
+<div class='highlight'><pre><code class='ruby'><span class='o'>[</span><span class='mi'>3</span><span class='p'>,</span> <span class='mi'>2</span><span class='p'>,</span> <span class='mi'>1</span><span class='o'>].</span><span class='n'>select</span> <span class='p'>{</span><span class='o'>|</span><span class='n'>x</span><span class='o'>|</span> <span class='n'>x</span> <span class='o'>&lt;</span> <span class='mi'>2</span><span class='p'>}</span>
+
+<span class='o'>[</span><span class='s1'>&#39;apple&#39;</span><span class='p'>,</span> <span class='s1'>&#39;banana&#39;</span><span class='p'>,</span> <span class='s1'>&#39;pear&#39;</span><span class='o'>].</span><span class='n'>select</span> <span class='p'>{</span> <span class='o'>|</span><span class='n'>w</span><span class='o'>|</span> <span class='n'>w</span><span class='o'>.</span><span class='n'>length</span> <span class='o'>&lt;=</span> <span class='mi'>5</span> <span class='p'>}</span>
+</code></pre></div><div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<ol>
+<li>
+<p>Go back to the file <code>marks.rb</code></p>
+</li>
+
+<li>
+<p>Write two more functions:</p>
+
+<ol>
+<li>a function <code>display_sorted</code> which displays the marks with the top mark first</li>
+
+<li>a function <code>display_selected</code> which displays only those who passed (got more than an &#8216;f&#8217;)</li>
+</ol>
+</li>
+
+<li>
+<p>Check your answers with <code>test_sort_select_marks.rb</code></p>
+</li>
+</ol>
+</div>
 	</div>
 
 	
