Updating to 76ffa0b4719e3b90fece067b3c4a142141757c48.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
   <meta name="viewport" content="width=device-width">
   <!-- Twitter bootstrap basic styles -->
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="/bootstrap/css/bootstrap-responsive.css">
 
   <!-- syntax highlighting CSS -->
   <link rel="stylesheet" href="/css/syntax.css">
+  <!-- Google webfont link -->
+<link href='http://fonts.googleapis.com/css?family=Arvo:700|Titillium+Web:900' rel='stylesheet' type='text/css'>
+
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="/css/main.css">
@@ -24,19 +28,10 @@
 
   <div class="container">
 
-    <div id="home">
-  <h2>Intro to web coding: HTML, CSS & Git</h2>
-  <ul class="posts">
-      <li><a href="html1">Session 1: About the internet</a></li>
-      <li><a href="html2">Session 2: Do you git it?</a></li>
-      <li><a href="html3">Session 3: Websites with style</a></li>
-      <li><a href="html4">Session 4: Coding with friends</a></li>
-      <li><a href="html5">Session 5: Does anyone care?</a></li>
-  </ul>
-  <h2>Intro to Ruby</h2>
-  <ul class="posts">
-      <li><a href="ruby1">Session 1: About the internet</a></li>
-  </ul>
+    <div class='hero-unit'>
+  <img src='/assets/logo.png'>
+  <h1>code61</h1>
+  <p>Open-source Coding Workshops</p>
 </div>
 
 
