--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <script type="text/javascript" src='/assets/custom.js'></script>
 
 </head>
-<body>
+<body class="homepage">
 
   <div class="container">
 
