--- a/colophon.html
+++ b/colophon.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>ruby4</title>
+  <title>Colophon</title>
   <meta name="viewport" content="width=device-width">
   <!-- Twitter bootstrap basic styles -->
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
@@ -28,22 +28,7 @@
 
   <div class="container">
 
-    <div class="page-header">
-  <h1>ruby4 <small></small></h1>
-</div>
-
-<div class="tabbable tabs-left">
-<ul class="nav nav-tabs" id="myTab">
-	
-</ul>
-
-<div class="tab-content">
-
-</div>
-
-</div>
-
-
+    
 
 
   </div> <!-- /container -->
