--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 ---
 layout: default
 title: code61 - Learn to code
+cssclass: homepage
 ---
 
-<div id="home">
-  <h2>Intro to web coding: HTML, CSS & Git</h2>
-  <ul class="posts">
-      <li><a href="html1">Session 1: About the internet</a></li>
-      <li><a href="html2">Session 2: Do you git it?</a></li>
-      <li><a href="html3">Session 3: Websites with style</a></li>
-      <li><a href="html4">Session 4: Coding with friends</a></li>
-      <li><a href="html5">Session 5: Does anyone care?</a></li>
-  </ul>
+<div class='hero-unit'>
+  <img src='/assets/logo.png'>
+  <h1>code61</h1>
+  <p>Open-source Coding Workshops</p>
 </div>
