Updating to 2af21a78be68b60ef31848cea45fc1378750f817.

--- a/hmwk0/index.html
+++ b/hmwk0/index.html
@@ -36,7 +36,11 @@
 <ul class="nav nav-tabs" id="myTab">
 	
 		
-		<li class="active"><a href="#1_sublime_text" data-toggle="tab">Sublime Text </a></li>
+		<li class="active"><a href="#0_welcome" data-toggle="tab">Welcome </a></li>
+		
+	
+		
+		<li><a href="#1_sublime_text" data-toggle="tab">Sublime Text </a></li>
 		
 	
 		
@@ -60,7 +64,7 @@
 		
 	
 		
-		<li><a href="#7_reading" data-toggle="tab">Reading </a></li>
+		<li><a href="#7_reading" data-toggle="tab">Preparation exercises </a></li>
 		
 	
 </ul>
@@ -68,7 +72,23 @@
 <div class="tab-content">
 
 	
-	<div class="tab-pane active" id="1_sublime_text">
+	<div class="tab-pane active" id="0_welcome">
+	
+
+		<h2>Welcome</h2>
+		<p>Welcome to the course preparation for the Code First Girls Summer 2013 programme!</p>
+
+<p>The tabs on the left hand side will take you through installing the software you&#8217;ll need for the course. Instructions are given in blue boxes.</p>
+<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>The blue boxes tell you what you need to do. Read them carefully.</p>
+</div>
+<p>If you have any problems, please let us know via the <a href='http://chat.code61.org'>course forum</a>. We would like people to sign up using their GitHub accounts (see the &#8220;GitHub and Course Forum&#8221; step) but if you&#8217;re having problems before that stage please feel free to give us a shout!</p>
+	</div>
+
+	
+	<div class="tab-pane " id="1_sublime_text">
 	
 
 		<h2>Sublime Text</h2>
@@ -368,12 +388,22 @@ gem install bundler</code></pre>
 	<div class="tab-pane " id="7_reading">
 	
 
-		<h2>Reading</h2>
-		<div class='exercise alert alert-info'><strong>
+		<h2>Preparation exercises</h2>
+		<p>Well done for getting to this point! You should now have all the software you need to start the course.</p>
+
+<p>In the first session we&#8217;ll be looking at HTML: the markup language used for webpages. You might have seen some HTML before. If not, it would be useful if you were slightly familiar with it beforehand, as we won&#8217;t spend that much time on it. In order to do this you can try to do the following sections from Codeacademy. If you don&#8217;t manage to do them all, try to have a look at the first one at least!</p>
+<div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
-<p>Do the &#8220;1 Introduction to HTML&#8221; from the <a href='http://www.codecademy.com/tracks/web'>Codecademy web track</a></p>
+<ol>
+<li>(Optional) Do the &#8220;1 Introduction to HTML&#8221; from the <a href='http://www.codecademy.com/tracks/web'>Codecademy web track</a></li>
+
+<li>(Optional) Do &#8220;2 HTML Structure: Using Lists&#8221;</li>
+
+<li>(Optional) Do &#8220;3 HTML Structure: Tables, Divs, and Spans&#8221;</li>
+</ol>
 </div>
+<p>Look forward to seeing you on Tuesday!</p>
 	</div>
 
 </div>
